--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,7 @@ gradlew
 gradlew.bat
 build
 /src/test/resources/selenoid.properties
+src/test/resources/test.properties
 notifications/config.json
 notifications/draft.txt
 gradle/wrapper
